[package]
name = "millionaire"
version = "0.4.0"
authors = ["Rainbow Asteroids <rainbow@portal2d.xyz>"]
edition = "2018"
description = "Game written in Rust. The goal is to get 1 million dollars by trading stonks."
readme = "README.md"
repository = "https://gitea.portal2d.xyz/RainbowAsteroids/Millionaire"
license = "GPL-3.0-only"
keywords = ["game", "text-based"]
categories = ["games", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For varying stock values
rand = "0.8.3"

# For determining where save files go
directories = "3.0.2"

# For creating save files
chrono = "0.4.19"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
